2019-04-26  Florian Weimer  <fweimer@redhat.com>

	elf: Link sotruss-lib.so with BIND_NOW for --enable-bind-now.
	* elf/Makefile (LDFLAGS-sotruss-lib.so): Set.

2019-04-26  Florian Weimer  <fweimer@redhat.com>

	Makeconfig: Move -Wl,-rpath-link options before library references.
	* Makeconfig (+link-pie, +link): Add $(link-libc-rpath-link).
	(link-libc): Remove $(link-libc-rpath-link).

2019-04-25  Florian Weimer  <fweimer@redhat.com>

	* Makeconfig (+link-pie-before-libc): Remove $(CC).
	(+link-pie, +link-pie-tests, +link-pie-printers-tests): Add $(CC).
	(+link-static-before-libc): Remove $(CC).
	(+link-static, +link-static-tests): Add $(CC).
	(+link-before-libc): Remove $(CC).
	(+link, +link-pie, +link-pie-printers): Add $(CC).

2019-04-26  Florian Weimer  <fweimer@redhat.com>

	* Makeconfig (+link-pie-before-libc): Remove $(CC).
	(+link-pie, +link-pie-tests, +link-pie-printers-tests): Add $(CC).
	(+link-static-before-libc): Remove $(CC).
	(+link-static, +link-static-tests): Add $(CC).
	(+link-before-libc): Remove $(CC).
	(+link, +link-pie, +link-pie-printers): Add $(CC).

2019-04-25  David Abdurachmanov  <david.abdurachmanov@gmail.com>

	[BZ#24484]
	* sysdeps/riscv/ldsodefs.h (DL_RO_DYN_SECTION): Remove.

2019-04-25  Florian Weimer  <fweimer@redhat.com>

	benchtests: Enable BIND_NOW if configured with --enable-bind-now.
	* benchtests/Makefile [$(bind-now)] (link-bench-bind-now): Set.
	(bench-link-targets): New variable.
	($(binaries-bench) …): Use it.  Set LDFLAGS accordingly.

2019-04-25  Florian Weimer  <fweimer@redhat.com>

	Also enable BIND_NOW for programs if --enable-bind-now.
	* Makeconfig [$(bind-now)] (link-extra-flags): Add -Wl,-z,now.
	(+link-pie): Use $(link-extra-flags).
	(+link-static): Likewise.
	[! $(build-pie-default)] (+link): Likewise.
	* manual/install.texi (Configuring and compiling): Update
	--enable-bind-now description.
	* INSTALL: Regenerated.

2019-04-24  Wilco Dijkstra  <wdijkstr@arm.com>
